alignment fixes, investment amount

--- a/frontend/src/components/Graph.css
+++ b/frontend/src/components/Graph.css
@@ -1,4 +1,4 @@
 .GRAPH {
-    width: 570px;
+    width: 600px;
     margin: auto;
 }
